--- a/_config.yml
+++ b/_config.yml
@@ -58,3 +58,5 @@ topics:
   - name: Golang
     web_url: https://golang.org/
     image_url: https://golang.org/doc/gopher/doc.png
+
+theme: jekyll-theme-slate
